Tweak psalm.ltx
Remove unnecessary hyphen in ‘automatic’

--- a/psalm.ltx
+++ b/psalm.ltx
@@ -41,7 +41,7 @@
 
 \stanzagap
 
-\vsnonums{\dyn{f}}{Verse numbers are \bl au-to- \bl matic}
+\vsnonums{\dyn{f}}{Verse numbers are \bl auto- \bl matic}
 {}{But \bl sometimes \ch you \bl may not \bl want them}
 
 \vsnonums{}{For example \bl in the \bl Gloria}
