--- a/psalm.sty
+++ b/psalm.sty
@@ -68,7 +68,7 @@
     {*\space}
 
 % dynamics style
-\newcommand{\dyn}[1]{\textbf{\textit{#1}}}
+\newcommand{\dyn}[1]{\lilyDynamics{#1}}
 
 % second half of chant
 \newcommand{\second}{$\dagger$}
