Use active characters for bar line and dot
Makes psalm text easier to read and write

--- a/psalm.ltx
+++ b/psalm.ltx
@@ -23,29 +23,29 @@
 \begin{center}
 \begin{psalm}[9] % override number of first verse (optional)
 
-\vs{Full\quad\dyn{f}}{The first part of the first \bl verse is \bl forte}
-{\dyn{p}}{And the second part \bl of the \ch first \bl verse is \bl piano.}
+\vs{Full\quad\dyn{f}}{The first part of the first | verse is | forte}
+{\dyn{p}}{And the second part | of the_first | verse is | piano.}
 
-\vscontinue{Full\quad\dyn{mf}}{Here is the \bl second \bl verse}
-{}{Which con- \bl tinues \ch with- \bl out a \bl break.}
+\vscontinue{Full\quad\dyn{mf}}{Here is the | second | verse}
+{}{Which con- | tinues_with- | out a | break.}
 
-\vs{\second}{This verse should use the second \bl half \ch of the \bl chant}
-{}{Which is \bl speci-fied \bl using \ch a \bl dagger.}
+\vs{\second}{This verse should use the second | half_of the | chant}
+{}{Which is | speci-fied | using_a | dagger.}
 
-\vs{}{Sometimes you may want to pause \ps in the \bl middle \ch of a \bl verse}
-{}{Or to specify the n\syl{u}mb\syl{e}r of \bl syllab-les \bl using \bl dots.}
+\vs{}{Sometimes you may want to pause * in the | middle_of a | verse}
+{}{Or to specify the n\syl{u}mb\syl{e}r of | syllab-les | using | dots.}
 
 \vs{}{If a verse is very long and goes on and on forever\breaklongline
-    you may want to break in the \bl middle \ch of a \bl line}
-{}{And sometimes you may want a vertical \bl space \bl after \ch a \bl verse.}
+    you may want to break in the | middle_of a | line}
+{}{And sometimes you may want a vertical | space | after_a | verse.}
 
 \stanzagap
 
-\vsnonums{\dyn{f}}{Verse numbers are \bl auto- \bl matic}
-{}{But \bl sometimes \ch you \bl may not \bl want them}
+\vsnonums{\dyn{f}}{Verse numbers are | auto- | matic}
+{}{But | sometimes_you | may not | want them}
 
-\vsnonums{}{For example \bl in the \bl Gloria}
-{}{At the \bl end \bl of a \bl psalm.}
+\vsnonums{}{For example | in the | Gloria}
+{}{At the | end | of a | psalm.}
 
 \end{psalm}
 \end{center}
